--- a/index.html
+++ b/index.html
@@ -1,13 +1,113 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>css3流星雨动效背景</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+  <title>外星语转换与流星雨动效</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    /* 整体背景设置为深紫色，营造神秘氛围 */
+    body {
+      background-color: #2c003e;
+      color: #00ffea;
+      font-family: 'Orbitron', sans-serif;
+      animation: bgGlow 5s infinite alternate;
+    }
+
+    @keyframes bgGlow {
+      from {
+        background-color: #2c003e;
+      }
+      to {
+        background-color: #4a0068;
+      }
+    }
+
+    /* 主容器样式 */
+    .main-container {
+      background-color: rgba(0, 0, 0, 0.5);
+      border: 2px solid #00ffea;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00ffea;
+      padding: 20px;
+      margin: 20px;
+      animation: containerGlow 3s infinite alternate;
+      z-index: 1;
+      position: relative;
+    }
+
+    @keyframes containerGlow {
+      from {
+        box-shadow: 0 0 20px #00ffea;
+      }
+      to {
+        box-shadow: 0 0 30px #00ffea;
+      }
+    }
+
+    /* 标题样式 */
+    h1 {
+      text-align: center;
+      text-shadow: 0 0 10px #00ffea;
+      animation: titleGlow 2s infinite alternate;
+    }
+
+    @keyframes titleGlow {
+      from {
+        text-shadow: 0 0 10px #00ffea;
+      }
+      to {
+        text-shadow: 0 0 20px #00ffea;
+      }
+    }
+
+    /* 标签样式 */
+    label {
+      display: block;
+      margin-bottom: 5px;
+      color: #00ffea;
+    }
+
+    /* 输入框和输出框样式 */
+    textarea {
+      background-color: rgba(0, 0, 0, 0.3);
+      border: 1px solid #00ffea;
+      color: #00ffea;
+      border-radius: 5px;
+      padding: 10px;
+      width: 100%;
+      margin-bottom: 15px;
+      transition: border-color 0.3s, box-shadow 0.3s;
+    }
+
+    textarea:focus {
+      border-color: #ff00ff;
+      box-shadow: 0 0 10px #ff00ff;
+      outline: none;
+    }
+
+    /* 按钮样式 */
+    button {
+      background-color: #00ffea;
+      color: #2c003e;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    button:hover {
+      background-color: #ff00ff;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 
-<body translate="no">
+<body class="min-h-screen flex flex-col justify-center items-center">
   <div class="night">
     <div class="shooting_star"></div>
     <div class="shooting_star"></div>
@@ -30,149 +130,146 @@
     <div class="shooting_star"></div>
     <div class="shooting_star"></div>
     <div class="shooting_star"></div>
-    
-    <body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center">
-    <div class="flex justify-center items-center h-full">
-        <div class="bg-white p-8 rounded-lg shadow-md w-96">
-            <h1 class="text-2xl font-bold mb-4 text-center">外星语转换器</h1>
-            <div class="mb-4">
-                <label for="inputText" class="block text-gray-700 text-sm font-bold mb-2">输入文本:</label>
-                <textarea id="inputText" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="4"></textarea>
-            </div>
-            <div class="flex space-x-4 mb-4">
-                <button id="toAlienButton" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">转换为外星语</button>
-                <button id="fromAlienButton" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">从外星语转换回来</button>
-            </div>
-            <div class="mt-4">
-                <label for="outputText" class="block text-gray-700 text-sm font-bold mb-2">转换结果:</label>
-                <textarea id="outputText" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" rows="4" readonly></textarea>
-            </div>
-        </div>
+  </div>
+  <div class="flex justify-center items-center h-full">
+    <div class="main-container w-96">
+      <h1 class="text-2xl font-bold mb-4">外星语转换器</h1>
+      <div class="mb-4">
+        <label for="inputText">输入文本:</label>
+        <textarea id="inputText" rows="4"></textarea>
+      </div>
+      <div class="flex space-x-4 mb-4">
+        <button id="toAlienButton">转换为外星语</button>
+        <button id="fromAlienButton">从外星语转换回来</button>
+      </div>
+      <div class="mt-4">
+        <label for="outputText">转换结果:</label>
+        <textarea id="outputText" rows="4" readonly></textarea>
+      </div>
     </div>
+  </div>
 
-    <script>
-        const inputText = document.getElementById('inputText');
-        const toAlienButton = document.getElementById('toAlienButton');
-        const fromAlienButton = document.getElementById('fromAlienButton');
-        const outputText = document.getElementById('outputText');
-        const translationMap = new Map();
+  <script>
+    const inputText = document.getElementById('inputText');
+    const toAlienButton = document.getElementById('toAlienButton');
+    const fromAlienButton = document.getElementById('fromAlienButton');
+    const outputText = document.getElementById('outputText');
+    const translationMap = new Map();
 
-        const charMapping = {
-            'a': 'Ω',
-            'e': '∞',
-            'i': '~',
-            'o': '⊕',
-            'u': '∿',
-            'b': 'ɓ',
-            'c': 'ƈ',
-            'd': 'ɗ',
-            'f': 'ɸ',
-            'g': 'ɠ',
-            'h': 'ħ',
-            'j': 'ʄ',
-            'k': 'ƙ',
-            'l': 'ɫ',
-            'm': 'ɱ',
-            'n': 'ɲ',
-            'p': 'ƥ',
-            'q': 'ʠ',
-            'r': 'ɾ',
-            's': 'ʂ',
-            't': 'ƭ',
-            'v': 'ʋ',
-            'w': 'ʍ',
-            'x': 'χ',
-            'y': 'ɣ',
-            'z': 'ʐ'
-        };
+    const charMapping = {
+      'a': 'Ω',
+      'e': '∞',
+      'i': '~',
+      'o': '⊕',
+      'u': '∿',
+      'b': 'ɓ',
+      'c': 'ƈ',
+      'd': 'ɗ',
+      'f': 'ɸ',
+      'g': 'ɠ',
+      'h': 'ħ',
+      'j': 'ʄ',
+      'k': 'ƙ',
+      'l': 'ɫ',
+      'm': 'ɱ',
+      'n': 'ɲ',
+      'p': 'ƥ',
+      'q': 'ʠ',
+      'r': 'ɾ',
+      's': 'ʂ',
+      't': 'ƭ',
+      'v': 'ʋ',
+      'w': 'ʍ',
+      'x': 'χ',
+      'y': 'ɣ',
+      'z': 'ʐ'
+    };
 
-        const reverseCharMapping = {};
-        for (const [key, value] of Object.entries(charMapping)) {
-            reverseCharMapping[value] = key;
+    const reverseCharMapping = {};
+    for (const [key, value] of Object.entries(charMapping)) {
+      reverseCharMapping[value] = key;
+    }
+
+    function shuffleWord(word) {
+      let wordArray = word.split('');
+      for (let i = wordArray.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [wordArray[i], wordArray[j]] = [wordArray[j], wordArray[i]];
+      }
+      return wordArray.join('');
+    }
+
+    function toAlienLanguage(text) {
+      let result = "";
+      let words = text.split(' ');
+      let shuffledInfo = [];
+      for (let word of words) {
+        let newWord = "";
+        for (let char of word) {
+          newWord += charMapping[char.toLowerCase()] || char;
         }
-
-        function shuffleWord(word) {
-            let wordArray = word.split('');
-            for (let i = wordArray.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [wordArray[i], wordArray[j]] = [wordArray[j], wordArray[i]];
-            }
-            return wordArray.join('');
+        let isShuffled = false;
+        if (Math.random() > 0.5) {
+          newWord = shuffleWord(newWord);
+          isShuffled = true;
         }
-
-        function toAlienLanguage(text) {
-            let result = "";
-            let words = text.split(' ');
-            let shuffledInfo = [];
-            for (let word of words) {
-                let newWord = "";
-                for (let char of word) {
-                    newWord += charMapping[char.toLowerCase()] || char;
-                }
-                let isShuffled = false;
-                if (Math.random() > 0.5) {
-                    newWord = shuffleWord(newWord);
-                    isShuffled = true;
-                }
-                if (Math.random() > 0.3) {
-                    newWord += '~';
-                }
-                shuffledInfo.push({ original: word, shuffled: isShuffled });
-                result += newWord + " ";
-            }
-            return { text: result.trim(), shuffledInfo };
+        if (Math.random() > 0.3) {
+          newWord += '~';
         }
+        shuffledInfo.push({ original: word, shuffled: isShuffled });
+        result += newWord + " ";
+      }
+      return { text: result.trim(), shuffledInfo };
+    }
 
-        function fromAlienLanguage(text, shuffledInfo) {
-            let result = "";
-            let words = text.split(' ');
-            for (let i = 0; i < words.length; i++) {
-                let word = words[i].replace('~', '');
-                let newWord = "";
-                for (let char of word) {
-                    newWord += reverseCharMapping[char] || char;
-                }
-                if (shuffledInfo[i].shuffled) {
-                    const originalWord = shuffledInfo[i].original;
-                    newWord = originalWord;
-                }
-                result += newWord + " ";
-            }
-            return result.trim();
+    function fromAlienLanguage(text, shuffledInfo) {
+      let result = "";
+      let words = text.split(' ');
+      for (let i = 0; i < words.length; i++) {
+        let word = words[i].replace('~', '');
+        let newWord = "";
+        for (let char of word) {
+          newWord += reverseCharMapping[char] || char;
         }
+        if (shuffledInfo[i].shuffled) {
+          const originalWord = shuffledInfo[i].original;
+          newWord = originalWord;
+        }
+        result += newWord + " ";
+      }
+      return result.trim();
+    }
 
-        toAlienButton.addEventListener('click', function () {
-            const input = inputText.value;
-            const sentences = input.split(/[.!?]/).filter(sentence => sentence.trim()!== '');
-            let translatedText = '';
-            let allShuffledInfo = [];
+    toAlienButton.addEventListener('click', function () {
+      const input = inputText.value;
+      const sentences = input.split(/[.!?]/).filter(sentence => sentence.trim()!== '');
+      let translatedText = '';
+      let allShuffledInfo = [];
 
-            sentences.forEach(sentence => {
-                if (translationMap.has(sentence)) {
-                    const { text, shuffledInfo } = translationMap.get(sentence);
-                    translatedText += text + ' ';
-                    allShuffledInfo.push(...shuffledInfo);
-                } else {
-                    const { text, shuffledInfo } = toAlienLanguage(sentence);
-                    translationMap.set(sentence, { text, shuffledInfo });
-                    translatedText += text + ' ';
-                    allShuffledInfo.push(...shuffledInfo);
-                }
-            });
+      sentences.forEach(sentence => {
+        if (translationMap.has(sentence)) {
+          const { text, shuffledInfo } = translationMap.get(sentence);
+          translatedText += text + ' ';
+          allShuffledInfo.push(...shuffledInfo);
+        } else {
+          const { text, shuffledInfo } = toAlienLanguage(sentence);
+          translationMap.set(sentence, { text, shuffledInfo });
+          translatedText += text + ' ';
+          allShuffledInfo.push(...shuffledInfo);
+        }
+      });
 
-            outputText.value = translatedText.trim();
-            outputText.dataset.shuffledInfo = JSON.stringify(allShuffledInfo);
-        });
+      outputText.value = translatedText.trim();
+      outputText.dataset.shuffledInfo = JSON.stringify(allShuffledInfo);
+    });
 
-        fromAlienButton.addEventListener('click', function () {
-            const input = inputText.value;
-            const shuffledInfo = JSON.parse(outputText.dataset.shuffledInfo || '[]');
-            const translatedText = fromAlienLanguage(input, shuffledInfo);
-            outputText.value = translatedText;
-        });
-    </script>
-</body>
-
+    fromAlienButton.addEventListener('click', function () {
+      const input = inputText.value;
+      const shuffledInfo = JSON.parse(outputText.dataset.shuffledInfo || '[]');
+      const translatedText = fromAlienLanguage(input, shuffledInfo);
+      outputText.value = translatedText;
+    });
+  </script>
 </body>
 
 </html>
